[gd_scene load_steps=15 format=3 uid="uid://mif6kxwqpq3r"]

[ext_resource type="Script" uid="uid://kov381xcww14" path="res://scripts/game.gd" id="1_p57ef"]
[ext_resource type="Texture2D" uid="uid://b2gqu670g1lp3" path="res://textures/frame.png" id="1_yqjtg"]
[ext_resource type="Texture2D" uid="uid://b444o60h4wxas" path="res://textures/exterior.png" id="2_iywne"]
[ext_resource type="Texture2D" uid="uid://dal7ii483vsq2" path="res://textures/grass.png" id="2_lbhrr"]
[ext_resource type="Script" uid="uid://bcvsluy8ww7vc" path="res://scripts/player.gd" id="2_lnu2h"]
[ext_resource type="Texture2D" uid="uid://dbsnhfe6ogc50" path="res://textures/exterior_box.png" id="5_iywne"]
[ext_resource type="Texture2D" uid="uid://b1elgpgprp37r" path="res://textures/concrete.png" id="5_u5sy4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lnu2h"]
radius = 1.2333984
height = 4.8376465

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iywne"]
albedo_texture = ExtResource("2_lbhrr")
uv1_scale = Vector3(10, 10, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gee14"]
albedo_texture = ExtResource("5_u5sy4")
uv1_scale = Vector3(2, 2, 2)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lbhrr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_p57ef"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u5sy4"]
albedo_texture = ExtResource("5_iywne")
uv1_scale = Vector3(3, 2, 2)

[sub_resource type="BoxMesh" id="BoxMesh_gee14"]
lightmap_size_hint = Vector2i(14, 21)
material = SubResource("StandardMaterial3D_u5sy4")
custom_aabb = AABB(0, 0, 0, 1, 0, 0)

[node name="Game" type="Node3D"]
script = ExtResource("1_p57ef")

[node name="Rocket" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
billboard = 2
texture = ExtResource("1_yqjtg")

[node name="ExteriorWalls" type="Sprite3D" parent="Rocket"]
visible = false
billboard = 2
render_priority = 100
texture = ExtResource("2_iywne")

[node name="CollisionArea" type="Area3D" parent="Rocket"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rocket/CollisionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.23669434, 0)
shape = SubResource("CapsuleShape3D_lnu2h")

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0)
use_collision = true
size = Vector3(32, 1, 32)
material = SubResource("StandardMaterial3D_iywne")

[node name="Floor2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.768799, 0)
use_collision = true
size = Vector3(8, 8.537598, 8)
material = SubResource("StandardMaterial3D_gee14")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.104138)
script = ExtResource("2_lnu2h")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_lbhrr")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.52250695, 0)

[node name="Interact" type="RayCast3D" parent="Player/Camera3D"]
target_position = Vector3(0, 0, -2.5)
collision_mask = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ThePanel" type="Panel" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(160, 600)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -300.0
offset_right = 160.0
offset_bottom = 300.0
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/ThePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[font size=32]Checklist[/font]

[ ] Fins
[ ] Life support
[ ] Fuel
[ ] Thruster
[ ] Exterior walls"

[node name="PickUpPrompt" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "[E] Pick Up"

[node name="ThrowPrompt" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "[E] Drop
[Left Click] Throw"
horizontal_alignment = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.18096548, 0.98348945, 0, -0.98348945, 0.18096548, 0, 0, 0)

[node name="ExteriorWalls" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.06348, 0, 0)
collision_layer = 3
mass = 0.3

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExteriorWalls"]
shape = SubResource("BoxShape3D_p57ef")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ExteriorWalls"]
mesh = SubResource("BoxMesh_gee14")

[connection signal="body_entered" from="Rocket/CollisionArea" to="." method="_on_collision_area_body_entered"]
